fix overflow of the notes

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
   -webkit-box-shadow: 9px 12px 13px -4px rgba(51, 51, 51, 38%);
   -moz-box-shadow: 9px 12px 13px -4px rgba(51, 51, 51, 38%);
   border-width: 0;
-  height: 180px;
+  min-height: 180px;
   transition: box-shadow 0.25s ease-out 100ms;
   background-color: #fefae0;
 }
